tests/jastadd/negative/name_errors/L1/2_ConstCircularity.ob
MODULE TestModule;
	CONST a = a;
END TestModule.
